--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -1048,7 +1048,7 @@
                     <button *ngIf="this.id2 != 0" type="button" class=" me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()"><span class="first-letter">U</span>pdate</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
+                        [disabled]="BillMaster.ID === null" (click)="openModal1(content1)"><span class="first-letter">P</span>ayment</button>
                     <!-- <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button> -->
                     <button *ngIf="companySetting.LensOrderModule == 'true' " type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
