--- a/relinksys/web/src/app/inventory/order-form/order-form.component.html
+++ b/relinksys/web/src/app/inventory/order-form/order-form.component.html
@@ -93,10 +93,15 @@
                                                 *ngFor="let data of filterdata; let i = index;">
                                                 <td>
                                                     <!-- <button >Request</button> -->
-                                                    <button type="button" mat-raised-button color="primary"
+                                                    <!-- <button type="button" mat-raised-button color="primary"
                                                         *ngIf="(data.OrderRequestShopID == this.selectedShop[0] && data.ProductStatus == 'Order Request') "
                                                         (click)="openModalS(content00,data)">
                                                         Process
+                                                    </button> -->
+                                                    <button type="button" mat-raised-button color="primary"
+                                                        *ngIf="(data.OrderRequestShopID == this.selectedShop[0] && data.ProductStatus == 'Order Request') "
+                                                        (click)="openModalfg(content4,data)">
+                                                        Process1
                                                     </button>
 
                                                     <button type="button" mat-raised-button color="primary"
@@ -481,6 +486,111 @@
 
 </ng-template>
 
+
+
+<ng-template #content4 role="document" let-modal>
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+        <div class="container ">
+            <div class="row">
+                <div class="col-4">
+                    <h2 class="modal-title header pt-2" id="exampleModalLabel">  Finished Grid</h2>
+                </div>
+                <!-- <div class="col-2 pt-2">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Select Base Type</mat-label>
+                        <mat-select name="fishedBase" [(ngModel)]="fishedBase" #Basecontrol
+                            (selectionChange)="fishedBasetype(this.fishedBase)">
+                            <mat-option value="0.75">Base 0.75</mat-option>
+                            <mat-option value="1">Base 1</mat-option>
+                            <mat-option value="2">Base 2</mat-option>
+                            <mat-option value="3">Base 3</mat-option>
+                            <mat-option value="4">Base 4</mat-option>
+                            <mat-option value="5">Base 5</mat-option>
+                            <mat-option value="6">Base 5</mat-option>
+                            <mat-option value="7">Base 5</mat-option>
+                            <mat-option value="8">Base 5</mat-option>
+                            <mat-option value="9">Base 5</mat-option>
+                            <mat-option value="10">Base 5</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div> -->
+                <div class="col-3 pt-2" *ngIf="this.svChange == true">
+                     <button mat-raised-button
+                        [ngStyle]="{'background-color': isActive1 ? '#3f51b5' : '#dddddd','color':isActive1 ? '#fff' : '#000'}"
+                        (click)="plusToplusfg('+sph+cyl'); toggleActive(1)">
+                        +/+
+                    </button>
+
+                    <button mat-raised-button
+                        [ngStyle]="{'background-color': isActive2 ? '#3f51b5' : '#dddddd','color':isActive2 ? '#fff' : '#000'}"
+                        (click)="plusToplusfg('-sph-cyl'); toggleActive(2)" class="ms-2 me-2">
+                        -/-
+                    </button>
+
+                    <button mat-raised-button
+                        [ngStyle]="{'background-color': isActive3 ? '#3f51b5' : '#dddddd','color':isActive3 ? '#fff' : '#000'}"
+                        (click)="plusToplusfg('+sph-cyl'); toggleActive(3)">
+                        +/-
+                    </button>
+                </div>
+             
+            </div>
+        </div>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body p-0">
+        <div class="row">
+            <div class="col-12 mx-auto">
+                <div class="container p-0" *ngIf="dataSourcefg.length">
+                    <table mat-table [dataSource]="dataSourcefg" class="mat-elevation-z8"
+                        style="overflow: auto; height: 480px; width: 100%;">
+                        <!-- CYL Column -->
+                        <ng-container matColumnDef="cyl">
+                            <th mat-header-cell *matHeaderCellDef
+                                style="font-size: 16px;color:rgb(0 0 0); border: 1px solid; padding: 5px;text-align: center !important;">
+                                <b *ngIf="this.svChange == false">Add</b>    <b *ngIf="this.svChange == true">Cyl</b>  <br> <b> Sph </b>
+                            </th>
+                            <td mat-cell *matCellDef="let element"
+                                style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
+                                class="hovertblrow-col"> {{element.sph }} </td>
+                        </ng-container>
+                        <!-- Dynamic Columns for SPH -->
+                        <ng-container *ngFor="let cyl of cylValuesfg; let i = index" [matColumnDef]="cyl">
+                            <th mat-header-cell *matHeaderCellDef
+                                style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
+                              <b *ngIf="this.BaseS != 'Single Vision'">{{ cyl }}</b> 
+                              <b *ngIf="this.BaseS == 'Single Vision'">Qty</b>
+                            </th>
+                            <td mat-cell *matCellDef="let element"
+                                [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                                [style.border]="element[cyl].isBlue ? '1px solid' : 'none'"
+                                [style.cursor]="element[cyl].isBlue ? 'pointer' : 'none '"
+                                [ngClass]="{'disabled': element[cyl].value == 0}"
+                                (click)="element[cyl].value !== 0 && openModalSale(contentSale, element[cyl])">
+                                <ng-container *ngIf="element[cyl].isBlue">
+                                    <span class="inputBoxTD"
+                                        [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                                        style="border: none !important;background: none; ">
+                                        {{element[cyl].value}}
+                                    </span>
+                                </ng-container>
+                            </td>
+                          </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsfg" style="height: -1px !important;"
+                            class="hovertblrow-col"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsfg;"
+                            [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
+                            (mouseleave)="hoveredRow = null" style="height: -1px !important;" class="hovertblrow-col">
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <!-- product-quantity-grid.component.html -->
+         
+        </div>
+    </div>
+</ng-template>
+
 <ng-template #content01 role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
         <div class="container ">
@@ -513,11 +623,10 @@
     </div>
     <div class="modal-body p-0">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 ps-4">
                 <form #fg="ngForm">
                 <div class="row">
-                   
-                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 mt-1 ms-2">
+                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 mt-1 ">
                             <mat-form-field class="example-full-width mb-0 paddingInp">
                                 <mat-label>Select Product</mat-label>
                                 <mat-select name="ProductCategory" [(ngModel)]="data.ProductCategory"
@@ -545,7 +654,7 @@
                                     <mat-select name="{{spec.FieldName+'0'}}"
                                         [(ngModel)]="spec.SelectedValue"
                                         (selectionChange)="getFieldSupportData(i)" editable="true"
-                                        [required]="spec.Required === 1" #singleSelect>
+                                         #singleSelect>
                                         <mat-option>
                                             <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                             </ngx-mat-select-search>
@@ -653,8 +762,6 @@
                 </div>
             </div>
             <!-- product-quantity-grid.component.html -->
-    
-          
         </div>
         
         <form>
