--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -265,7 +265,18 @@
                                                                 </mat-select>
                                                             <mat-error>Select BillingFlow</mat-error>
                                                         </mat-form-field>
-                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-2 col-lg-1" *ngIf="this.company.OrderRequest === 'true'">
+                                                        <mat-form-field class="example-full-width mb-0">
+                                                             <mat-label>Order Shop</mat-label>
+                                                             <mat-select name="OrderShop" [(ngModel)]="data.OrderShop" required >
+                                                                 <mat-option [value]="Ts.ID" *ngFor="let Ts of shopListSS" > {{Ts.Name}}
+                                                                     <span [style.color]="'blue'"
+                                                                         *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                                                                 </mat-option>
+                                                             </mat-select>
+                                                         </mat-form-field>
+                                                    </div>
 
                                                     <div class="col-md-12  header mt-md-4">
                                                         <h2>Barcode Select</h2>
