--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -113,7 +113,7 @@
               <!-- <a href="javascript:void(0)" [routerLink]="['/sale/billing',0,0]" id="collapseExample">Billing</a> -->
               <a *ngIf="viewFlag.viewBillingSearch" href="javascript:void(0)" (click)="refresh('billinglist')" [routerLink]="['/sale/billinglist',0]" id="collapseExample3">Bill Search</a>
               <a *ngIf="viewFlag.viewCustomerSearch" href="javascript:void(0)" [routerLink]="['/sale/customerList']" id="collapseExample3">Customer Search</a>
-              <a *ngIf="user?.CompanyID  == 241 && viewFlag.viewOrderRequest" href="javascript:void(0)" [routerLink]="['/inventory/order-form']" id="collapseExample2">Order Request</a>
+              <a *ngIf=" viewFlag.viewOrderRequest" href="javascript:void(0)" [routerLink]="['/inventory/order-form']" id="collapseExample2">Order Request</a>
               <div *ngIf="companysetting.Doctor == 'true'">
                 <a *ngIf="viewFlag.viewDoctorList" href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample3">Doctor</a>
               </div>
@@ -133,6 +133,7 @@
               <a *ngIf="viewFlag.viewSupplierOrder" href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample4">Supplier Order</a>
               <a *ngIf="viewFlag.viewPurchaseConvert" href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample4">Convert To Purchase</a>
               <a *ngIf="viewFlag.viewSupplierOrderList" href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample4">Supplier OrderList</a>
+              <a *ngIf="viewFlag.viewOrderRequest" href="javascript:void(0)" [routerLink]="['/po/orderRequest']" id="collapseExample4">Supplier Request</a>
            
             </div>
           </div>
