--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -148,10 +148,15 @@
                         #Manualcontrol style="color:#ff651e;"
                         [disabled]="BillItem.PreOrder === true " (click)="manualDataRefresh()">Manual</mat-slide-toggle>
                 </div>
-                <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 341" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <div *ngIf="company.ID == 241 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Order" color="primary" [(ngModel)]="BillItem.Order" class="example-margin"
                         #Ordercontrol style="color:#ff651e;" (change)="manualDataRefresh()"
-                        >Order</mat-slide-toggle>
+                        [disabled]="this.loginShop.OrderRequest == 'false'">Order</mat-slide-toggle>
+                </div>
+                <div *ngIf="company.ID != 241 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                    <mat-slide-toggle name="Order" color="primary" [(ngModel)]="BillItem.Order" class="example-margin"
+                        #Ordercontrol style="color:#ff651e;" (change)="manualDataRefresh()"
+                       >Order</mat-slide-toggle>
                 </div>
                 <div *ngIf="this.loginShop.DiscountSetting == 'true' && company.ID != 241 && company.ID != 300" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="discontSettingBtn" color="primary" [(ngModel)]="discontSettingBtn" class="example-margin"
@@ -508,7 +513,7 @@
                     </mat-form-field>
                 </div>
 
-                <div *ngIf="BillItem.Order" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
+                <!-- <div *ngIf="BillItem.Order" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Order Shop</mat-label>
                         <mat-select name="OrderShop" [(ngModel)]="BillItem.OrderShop" required disabled>
@@ -518,7 +523,7 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
+                </div> -->
 
                 <div *ngIf="addCustomerBill" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 mb-3  ms-auto ">
                     <button *ngIf="BillItem.Manual === false &&  BillItem.PreOrder === false && BillItem.Order === false" type="submit"
