--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -133,7 +133,7 @@
               <a *ngIf="viewFlag.viewSupplierOrder" href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample4">Supplier Order</a>
               <a *ngIf="viewFlag.viewPurchaseConvert" href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample4">Convert To Purchase</a>
               <a *ngIf="viewFlag.viewSupplierOrderList" href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample4">Supplier OrderList</a>
-              <a *ngIf="viewFlag.viewOrderRequest" href="javascript:void(0)" [routerLink]="['/po/orderRequest']" id="collapseExample4">Supplier Request</a>
+              <!-- <a *ngIf="viewFlag.viewOrderRequest" href="javascript:void(0)" [routerLink]="['/po/orderRequest']" id="collapseExample4">Supplier Request</a> -->
            
             </div>
           </div>
