--- a/relinksys/web/src/app/inventory/order-form/order-form.component.html
+++ b/relinksys/web/src/app/inventory/order-form/order-form.component.html
@@ -1235,7 +1235,7 @@
             </div>
                 <div class="col-12 mt-3 mb-3">
                     <button [disabled]="!fx.valid" type="button" mat-raised-button color="primary"
-                        (click)="orderformassignsupplier()">Save</button>
+                     >Save</button>
                 </div>
             </div>
         </form>
